--- a/cloudmusic/public/index.html
+++ b/cloudmusic/public/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dva Demo</title>
   <link rel="stylesheet" href="index.css" />
 </head>
 <body>
 
-  <div id="root"></div>
+  <div id="root">
+    神话
+  </div>
   <script src="index.js"></script>
 
 </body>
