--- a/musics/public/index.html
+++ b/musics/public/index.html
@@ -12,6 +12,7 @@
     神话
   </div>
   <script src="./index.js"></script>
-
+  <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init()</script>
 </body>
 </html>
