--- a/musicss/public/index.html
+++ b/musicss/public/index.html
@@ -8,11 +8,23 @@
 </head>
 <body>
 
-  <div id="root">
-    神话
-  </div>
+  <div id="root"></div>
   <script src="./index.js"></script>
   <script src="//cdn.jsdelivr.net/npm/eruda"></script>
   <script>eruda.init()</script>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?84c627209ecc81c169657de1fa9f7615";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
+  <script src="https://browser.sentry-cdn.com/4.4.1/bundle.min.js" crossorigin="anonymous"></script>
+  <script>
+    eruda.init();
+    Sentry.init({ dsn: 'https://b41cc7db04bd4d79b813dc912419de48@sentry.io/1352808' });
+  </script>
 </body>
 </html>
